--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 filelock==3.7.1
 Flask==2.1.2
+gunicorn==20.1.0
 huggingface-hub==0.8.1
 idna==3.3
 importlib-metadata==4.11.4
